# FinNutriAgent

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md  environment.yml  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
Data/: README.md  data_card.md
Data/composition/: food_composition.csv
Data/financial/: financial_data.csv
Data/nutrition/: nutrition_requirements.csv
Data/prices/: food_prices.csv
config/: config.yaml
data/composition/: food_composition.csv
data/financial/: financial_data.csv  financial_data_scaled.csv
data/nutrition/: nutrition_requirements.csv
data/prices/: food_prices.csv
docs/: data_card.md  dataset_documentation.md  system_overview.md
example/: demo_finagent.ipynb
mnt/user-data/outputs/FinNutriAgent/data/: README.md
scripts/: __init__.py  budget_agent.py  evaluate_budget.py  nutrition_agent.py  optimizer.py  price_agent.py  reproduce_results.py  stress_test.py  validate_data.py
tests/: conftest.py  test_budget_agent.py  test_nutrition_agent.py  test_optimizer.py  test_price_agent.py
