[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finnutriagent"
version = "0.1.0"
description = "Agentic AI for household nutrition and budget optimization."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC BY 4.0"}
authors = [{name = "Ali Akarma"}]

dependencies = [
  "pandas>=2.0.0,<3",
  "numpy>=1.24.0,<2",
  "pulp>=2.7.0,<4",
  "matplotlib>=3.7.0,<4",
  "seaborn>=0.12.0,<1",
  "jupyter>=1.0.0,<2",
  "ipykernel>=6.0.0,<7",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0,<9",
  "pytest-cov>=4.1.0,<6",
]
